syntax = "proto3";
package swapper.proto;

option java_package = "com.android.tools.deploy.proto";
option java_outer_classname = "Common";

message Config {

  // The path to the jar containing instrumentation data.
  string instrumentation_jar = 1;

  // The application package.
  string package_name = 2;

  // If true, restarts the current activity after a successful hot-swap.
  bool restart_activity = 3;

  // The classes to be hot-swapped.
  repeated ClassDef classes = 4;
}

message ClassDef {

  // JVM class name for the class that is to be swapped.
  string name = 1;

  // Dex code of the class to be swapped.
  bytes dex = 2;
}
